# graphmind

./: .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-docs.yml  publish-crate.yml  release.yml
api/: openapi.yaml
benches/: algorithm_benchmark.rs  bench_setup.rs  finbench_benchmark.rs  full_benchmark.rs  graph_benchmarks.rs  graph_optimization_benchmark.rs  graphalytics_benchmark.rs  late_materialization_bench.rs  ldbc_benchmark.rs  ldbc_bi_benchmark.rs  mvcc_benchmark.rs  query_benchmark.rs  storage_benchmark.rs  vector_benchmark.rs
benches/finbench_common/: mod.rs
benches/graphalytics_common/: mod.rs
benches/ldbc_common/: mod.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/graphmind-graph-algorithms/: Cargo.toml  README.md
crates/graphmind-graph-algorithms/src/: cdlp.rs  common.rs  community.rs  flow.rs  lcc.rs  lib.rs  mst.rs  pagerank.rs  pathfinding.rs  pca.rs  topology.rs
crates/graphmind-optimization/: Cargo.toml  README.md
crates/graphmind-sdk/: Cargo.toml  README.md
crates/graphmind-sdk/src/: algo.rs  client.rs  embedded.rs  error.rs  lib.rs  models.rs  remote.rs  vector_ext.rs
crates/samyama-graph-algorithms/: Cargo.toml
crates/samyama-optimization/: Cargo.toml
crates/samyama-sdk/: Cargo.toml
docs/: ACID_GUARANTEES.md  ARCHITECTURE.md  BUG_FIXES.md  CYPHER_COMPATIBILITY.md  GLOSSARY.md  README.md  REQUIREMENTS.md  SDK_API_CLI_ARCHITECTURE.md  SUPPLY_CHAIN_GUARDIAN_DEMO.md  TECHNOLOGY_COMPARISONS.md  TECH_STACK.md
docs-site/: README.md  docusaurus.config.ts  package-lock.json  sidebars.ts
docs-site/docs/: CHANGELOG-v0.8.6.md  acid-guarantees.md  api.md  architecture.md  cypher-compatibility.md  getting-started.md  glossary.md  tech-stack.md
docs/ADR/: ADR-001-use-rust-as-primary-language.md  ADR-002-use-rocksdb-for-persistence.md  ADR-003-use-resp-protocol.md  ADR-004-use-raft-consensus.md  ADR-005-use-capnproto-serialization.md  ADR-006-use-tokio-async-runtime.md  ADR-008-multi-tenancy-namespace-isolation.md  ADR-010-observability-stack.md  ADR-011-cypher-crud-operations.md  ADR-013-peg-grammar-atomic-keywords.md  ADR-014-explain-profile-queries.md  ADR-015-graph-native-query-planning.md  README.md
docs/archive/: ARCHITECTURE_ROADMAP.md  GNN_PROPOSAL.md  PERFORMANCE_ROADMAP.md
docs/ldbc/: FINBENCH.md  GRAPHALYTICS.md  README.md  SNB_BI.md  SNB_INTERACTIVE.md
docs/optimization/: CASE_STUDY_HEALTHCARE.md
docs/performance/: BENCHMARKS.md  BENCHMARK_COMPARISON.md
docs/product/: README.md  testcases.csv  usecases.csv  workflows.csv
docs/test-results/: COMPREHENSIVE_TEST_REPORT.md  PHASE2_RESP_TESTS.md  README.md
examples/: aact_loader.rs  agentic_enrichment_demo.rs  banking_demo.rs  clinical_trials_demo.rs  cluster_demo.rs  cricket_loader.rs  druginteractions_loader.rs  enterprise_soc_demo.rs  finbench_loader.rs  industrial_kg_demo.rs  knowledge_graph_demo.rs  ldbc_loader.rs  pathways_loader.rs  pca_demo.rs  sdk_demo.rs  simple_client_demo.py  smart_manufacturing_demo.rs  social_network_demo.rs  supply_chain_demo.rs  surveillance_loader.rs
examples/aact_common/: mod.rs
examples/cricket_common/: mod.rs
examples/druginteractions_common/: mod.rs
examples/finbench_common/: mod.rs
examples/pathways_common/: mod.rs
examples/surveillance_common/: mod.rs
opencypher9/: cypher.pest  cypher_pest_compiled.pest
scripts/: README.md  download_graphalytics.sh  download_snapshot.py  social_network_demo.cypher  upload_snapshot.py
sdk/python/: Cargo.toml  README.md  pyproject.toml
sdk/python/graphmind_mcp/: __init__.py  __main__.py  cli.py  escape.py  schema.py  server.py
sdk/python/graphmind_mcp/generators/: __init__.py  algorithm_tools.py  base.py  edge_tools.py  generic_tools.py  node_tools.py  vector_tools.py
sdk/python/samyama_mcp/: __init__.py  __main__.py  cli.py  config.py  schema.py  server.py
sdk/python/samyama_mcp/generators/: __init__.py  algorithm_tools.py  base.py  edge_tools.py  generic_tools.py  node_tools.py  vector_tools.py
sdk/python/src/: lib.rs
sdk/python/tests/: test_embedded.py  test_mcp_escape.py  test_mcp_generators.py  test_mcp_schema.py  test_mcp_server.py  test_vector.py
sdk/typescript/: README.md  package-lock.json  package.json
src/: audit.rs  auth.rs  lib.rs  main.rs  metrics.rs  rbac.rs  tenant_store.rs
src/agent/: mod.rs  tools.rs
src/algo/: mod.rs
src/embed/: client.rs  mod.rs
src/graph/: catalog.rs  edge.rs  event.rs  mod.rs  node.rs  property.rs  store.rs
src/http/: handler.rs  mod.rs  server.rs
src/index/: manager.rs  mod.rs  property_index.rs
src/nlq/: client.rs  mod.rs
src/persistence/: mod.rs  storage.rs  tenant.rs  wal.rs
src/protocol/: command.rs  mod.rs  resp.rs  server.rs
src/query/: ast.rs  cypher.pest  cypher.pest.old  mod.rs  parser.rs  parser.rs.old
src/raft/: cluster.rs  mod.rs  network.rs  node.rs  state_machine.rs  storage.rs
src/rdf/: mapping.rs  mod.rs  namespace.rs  schema.rs  store.rs  types.rs
src/sharding/: mod.rs  proxy.rs  router.rs
src/snapshot/: format.rs  mod.rs
src/sparql/: executor.rs  mod.rs  optimizer.rs  results.rs
src/vector/: index.rs  manager.rs  mod.rs
tests/: acid_test.rs  advanced_aggregations.rs  advanced_cypher.rs  ai_features_test.rs  algo_integration_test.rs  algo_test.rs  auth_test.rs  complex_cypher_test.rs  comprehensive_test.rs  concurrency_test.rs  cypher_crud_test.rs  edge_cases_test.rs  entertainment_graph_test.rs  explain_investigation_test.rs  full_merge_test.rs  idempotency_test.rs  index_test.rs  multi_objective_test.rs  multi_tenancy_test.rs  multi_unwind_test.rs  mvcc_test.rs  optimization_test.rs  params_test.rs  search_clause_test.rs  sharding_test.rs  special_chars_test.rs  target_node_filter_test.rs  tck_runner.rs  uuid_create_test.rs  v060_features_test.rs  vector_e2e_test.rs  vector_query_test.rs  vector_search_test.rs
tests/integration/: README.md  test_resp_basic.py  test_resp_visual.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+197 files in other folders)
