[package]
name = "graphmind-graph-algorithms"
version = "0.8.1"
edition = "2021"
authors = ["Graphmind Team"]
description = "Graph algorithms (PageRank, WCC, BFS, Dijkstra) for Graphmind Graph Database"
license = "Apache-2.0"
repository = "https://github.com/fab679/graphmind"
keywords = ["graph", "algorithms", "pagerank", "bfs", "wcc"]
categories = ["algorithms", "science"]
readme = "README.md"

[dependencies]
# No heavy dependencies needed for pure topology
serde = { version = "1.0", features = ["derive"], optional = true }
ndarray = "0.15"
rand = "0.8"