[workspace]

[package]
name = "graphmind-python"
version = "0.6.3"
edition = "2021"
authors = ["Graphmind Team"]
description = "Python bindings for the Graphmind Graph Database SDK"
license = "Apache-2.0"

[lib]
name = "graphmind"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
graphmind-sdk = { path = "../../crates/graphmind-sdk", version = "0.6.3" }
tokio = { version = "1.35", features = ["rt-multi-thread"] }
serde_json = "1.0"
