[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "graphmind"
version = "0.6.3"
description = "Python SDK for the Graphmind Graph Database"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [{name = "Graphmind Team"}]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
]
dependencies = [
    "fastmcp>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
graphmind-mcp-serve = "graphmind_mcp.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-packages = ["graphmind_mcp"]
