[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "graphmind"
version = "0.8.0b1"
description = "Python SDK for the Graphmind Graph Database — embedded and remote modes"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [{name = "Graphmind Team"}]
keywords = ["graph-database", "cypher", "knowledge-graph", "embedded-database", "graphmind"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = [
    "fastmcp>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/fab679/graphmind"
Repository = "https://github.com/fab679/graphmind"
Documentation = "https://fab679.github.io/graphmind/docs/sdks/python"

[project.scripts]
graphmind-mcp-serve = "graphmind_mcp.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-packages = ["graphmind_mcp"]
